Potential horizontal scroll issue fix

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -11,6 +11,7 @@
 }
 
 body {
+    overflow-x: hidden;
     background-color: var(--theme-color-secondary);
 }
 
